# VoiceVault

./: .gitignore  STT_Engine.py  client.py  dir_structure.md  justfile  pyproject.toml  server.py  whis_test.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
MVP/: main.py
api/: dependencies.py  routes.py  schemas.py
docs/: claude-plan.md  claude_pseudocode.md  o3_todo_kanban.md
examples/: Untitled.ipynb  sr_example.py
services/: STT_Engine.py  file_manager.py
static/: main.js
templates/: index.html
