[project]
name = "voicevault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "datasets[audio]>=4.0.0",
    "evaluate>=0.4.5",
    "fastapi[standard]>=0.116.1",
    "ffmpeg>=1.4",
    "ipywidgets>=8.1.7",
    "jiwer>=4.0.0",
    "jupyter>=1.1.1",
    "openai-whisper>=20250625",
    "pydantic>=2.11.7",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "speechrecognition>=3.14.3",
    "torchcodec>=0.5",
    "transformers>=4.54.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
